Rename Link label to Image Link

--- a/src/view/createPost.html.twig
+++ b/src/view/createPost.html.twig
@@ -13,8 +13,8 @@
 				<span class="text-danger">{{ data['titleError'] }}</span>
 			</div>
 			<div class="mb-3">
-				<label for="link" class="form-label">Link</label>
-				<input type="text" class="form-control" name="link" id="link" placeholder="Enter link">
+				<label for="link" class="form-label">Image Link</label>
+				<input type="text" class="form-control" name="link" id="link" placeholder="Enter image link">
 				<span class="text-danger">{{ data['linkError'] }}</span>
 			</div>
 			<div class="mb-3">
